added the attendance vizualiser on instructor aide

--- a/templates/instructor/index.html
+++ b/templates/instructor/index.html
@@ -387,7 +387,13 @@ Instructor -> Home
                                 <td class="border-bottom-0">
                                     <a href="{% url 'instructor_add_sheet' %}" class="btn btn-outline-warning">Add Sheet</a>
                                 </td>
+
+                                <td class="border-bottom-0">
+                                    <a href="{% url 'instructor_attendance_visualizer' %}" class="btn btn-outline-success">Attendance Visualizer</a>
+                                </td>
                             </tr>
+
+                            
 
                             
                         </tbody>
