--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -766,7 +766,7 @@ print("Hello World")
                     </div>
 
                     <!-- Next Your Institute -->
-                    <div class="region-group next-institute-card">
+                    <div class="region-group-next-card  next-institute-card">
                         <h4 class="region-title">
                             <i class="fas fa-plus-circle"></i>
                             Next: Your Institute<i class="fas fa-fire"></i>
@@ -2041,13 +2041,13 @@ print("Hello World")
                     </div>
 
                 </div>
-                <div class="stats-content" style="margin-top: -10%;">
+                <!-- <div class="stats-content" style="margin-top: -10%;">
                     
                     <iframe style="border-radius: 4%;" width="100%" height="250" 
                     src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTxKEXFGTOwunkykOkEwcoqC-jLfCoWvZ9y04Lu4LpiFX8a11xYBA2lRP8W1pko_iSiPrHxx2_0VIFS/pubhtml?gid=65729728&single=true" 
                     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
                     
-                </div>
+                </div> -->
             </div>
 
             <!-- Webinar Recording -->
@@ -2075,7 +2075,7 @@ print("Hello World")
                 </div>
             </div>
 
-            <!-- Problem of the Day
+            <!-- Problem of the Day -->
             <div class="community-card potd-card">
                 <div class="card-header">
                     <i class="fas fa-code"></i>
@@ -2092,12 +2092,12 @@ print("Hello World")
                     </p>
                     <div class="problem-stats">
                         <span class="stat">
-                            <i class="fas fa-users"></i>
+                            <i class="fas fa-trophy"></i>
                             156 solved today
                         </span>
                         <span class="stat">
-                            <i class="fas fa-clock"></i>
-                            Avg: 12 min
+                            <i class="fas fa-users"></i>
+                            453 total attempts
                         </span>
                     </div>
                     <button class="solve-btn">
@@ -2105,10 +2105,10 @@ print("Hello World")
                         Solve Now
                     </button>
                 </div>
-            </div> -->
+            </div> 
 
             <!-- Community Stats -->
-            <div class="community-card stats-card">
+            <!-- <div class="community-card stats-card">
                 <div class="card-header">
                     <i class="fas fa-chart-line"></i>
                     <h3>Community Pulse</h3>
@@ -2151,7 +2151,7 @@ print("Hello World")
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         
         </div>
